[workspace]
members = []

[package]
name = "rav1d"
authors = ["C2Rust"]
version = "0.2.0"
publish = false
edition = "2021"
autobins = false
autotests = false
default-run = "dav1d"

[lib]
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
path = "tools/dav1d.rs"
name = "dav1d"

[[bin]]
path = "tests/seek_stress.rs"
name = "seek_stress"

[dependencies]
assert_matches = "1.5.0"
atomig = { version = "0.4.0", features = ["derive"] }
bitflags = "2.4.0"
cfg-if = "1.0.0"
libc = "0.2"
num_cpus = "1.0"
paste = "1.0.14"
raw-cpuid = "11.0.1"
strum = { version = "0.25.0", features = ["derive"] }
to_method = "1.1.0"
zerocopy = "0.7.32"

[build-dependencies]
cc = "1.0.79"
nasm-rs = "0.2.4"

[features]
default = ["asm", "bitdepth_8", "bitdepth_16"]
asm = []
bitdepth_8 = []
bitdepth_16 = []

[profile.opt-dev]
# The debug builds run tests very slowly so this profile keeps debug assertions
# while enabling basic optimizations. The profile is not suitable for debugging.
inherits = "dev"
opt-level = 1

[profile.release]
codegen-units = 1
