[package]
name = "rav1d-cli"
authors = ["Rav1d Developers", "Prossimo"]
version = "1.0.0"
edition = "2021"
default-run = "dav1d"
description = "Rust port of the dav1d AV1 decoder CLI tools"
license = "BSD-2-Clause"
repository = "https://github.com/memorysafety/rav1d"
exclude = ["*.c", "*.h", "*.in", "meson*"]

[[bin]]
path = "dav1d.rs"
name = "dav1d"

[[bin]]
path = "seek_stress.rs"
name = "seek_stress"

[dependencies]
cfg-if = "1.0.0"
libc = "0.2"
rav1d = { path = "../", version = "1.0.0", default-features = false }

[features]
default = [
    "asm_nonlinux",
    "asm_arm64_dotprod",
    "asm_arm64_i8mm",
    "bitdepth_8",
    "bitdepth_16",
]
asm_nonlinux = ["rav1d/asm_nonlinux"]
asm_linux = ["rav1d/asm_linux"]
asm_arm64_dotprod = ["rav1d/asm_arm64_dotprod"]
asm_arm64_i8mm = ["rav1d/asm_arm64_i8mm"]
bitdepth_8 = ["rav1d/bitdepth_8"]
bitdepth_16 = ["rav1d/bitdepth_16"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
] }
