# Copyright © 2018, VideoLAN and dav1d authors
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this
#    list of conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice,
#    this list of conditions and the following disclaimer in the documentation
#    and/or other materials provided with the distribution.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
# ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
# ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
# LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

tests += [
	['00000671', files('00000671.ivf'), '827a458a97061dfcdb8b05039ca1e531'],
	['00000672', files('00000672.ivf'), 'c26f65fd2594013867d137cd6faa6bd0'],
	['00000673', files('00000673.ivf'), '6232de3d00e39a0f82f06e2d82d9b8fd'],
	['00000674', files('00000674.ivf'), '6f36fa164297da4aacff0446841d15bb'],
	['00000675', files('00000675.ivf'), '38774361479384b1be2ca0b0aef6fc46'],
	['00000676', files('00000676.ivf'), 'd85a76e890a7e06ea2ebaf17840708e2'],
	['00000677', files('00000677.ivf'), '386e983d23cbf18d66b091776839a7cf'],
	['00000678', files('00000678.ivf'), '0103f3a9da30305df5e43956567044e5'],
	['00000679', files('00000679.ivf'), 'b209ff325f7e334030eb61e9769d3fd1'],
	['00000680', files('00000680.ivf'), '446fabbbd739634511bd186d36675467'],
	['00000681', files('00000681.ivf'), '1f3a61280b4aa60896156d1533b95043'],
	['00000682', files('00000682.ivf'), 'b617a6745ad265379a5ae6c54840a3a1'],
	['00000683', files('00000683.ivf'), 'a011736a698bd9f7b76337643c05e2eb'],
	['00000684', files('00000684.ivf'), '32eab428936dad795971f57759b87260'],
	['00000685', files('00000685.ivf'), '9f9b467dc6259331c413361464ee7d6a'],
	['00000716', files('00000716.ivf'), '73be89ae15e0f938d7d3d7f1f6d3dd0d'],
	['00000717', files('00000717.ivf'), '945acb0ad0ce802934875eafd3bc16af'],
	['00000718', files('00000718.ivf'), '0ebf288b3b12ff700eb552488b14f0bb'],
	['00000719', files('00000719.ivf'), '706c707518ccda41667fc2f0720a7eda'],
	['00000720', files('00000720.ivf'), 'd82139ca06b166042bfc2ac02500627e'],
	['00000721', files('00000721.ivf'), 'e8fe7563f12979cc016fd4d12fbb796c'],
	['00000722', files('00000722.ivf'), '6391c570438827d14ec5449a3f0b287d'],
	['00000723', files('00000723.ivf'), 'fc31f12fffddbf10965741a30894c6cb'],
	['00000724', files('00000724.ivf'), '1c8b94bb8a8ed7d62a1d0ccb9f6a1800'],
	['00000725', files('00000725.ivf'), '05cf0316bf02448062df55fc395c6546'],
	['00000726', files('00000726.ivf'), '8a9963c77999c6a9eb6feaa8b644f905'],
	['00000727', files('00000727.ivf'), 'c5dc7456bed2cfda7dc427c155611e5d'],
	['00000728', files('00000728.ivf'), '28627b7eec64c99cf9b73c499aa09dc7'],
	['00000729', files('00000729.ivf'), '2893cc6059329cd01fe0e4bbbbd76d69'],
	['00000730', files('00000730.ivf'), '6562c7e75e2706c85be85a1a096f0445'],
	['00000761', files('00000761.ivf'), '46e8814869adc3a37feb78225b3ae292'],
	['00000762', files('00000762.ivf'), 'ada31fb4a7468319df33d49162b22cd2'],
	['00000763', files('00000763.ivf'), 'd317ca74657573b751c51e184ed24468'],
	['00000764', files('00000764.ivf'), '717f35ae37363e45f51d9ef7f529b689'],
	['00000765', files('00000765.ivf'), '73c58d4cc54981a9b8a7f2a96e3a7c45'],
	['00000766', files('00000766.ivf'), '4fdef45b148cc34675869b542f98af74'],
	['00000767', files('00000767.ivf'), 'bfcbd02d4f04fbd88ad209d595e8f567'],
	['00000768', files('00000768.ivf'), 'a05b52bab2ef6d8538f393cb10d0896e'],
	['00000769', files('00000769.ivf'), '33aa2debe09757ed4c448186f287f5e8'],
	['00000770', files('00000770.ivf'), 'b19a2e7c41e21df6b2611a4ed7a759f3'],
	['00000771', files('00000771.ivf'), 'fd36b944e46cf3757d4697ffb906db10'],
	['00000772', files('00000772.ivf'), '326df7173341bf3c072edb7b283b20da'],
	['00000773', files('00000773.ivf'), 'd849f7aa7966a1da727422be0b0d8301'],
	['00000774', files('00000774.ivf'), 'bcfb2cef8b2119f3a005254da261d220'],
	['00000775', files('00000775.ivf'), 'aaedde856e3d781df45ed0a7563f7596'],
	['00000820', files('00000820.ivf'), '1e8b62fe47ee26a36dd9c7f698ddb8da'],
	['00000821', files('00000821.ivf'), '73c3f8a045a47d50f9593718e8d182fd'],
	['00000822', files('00000822.ivf'), '3d77d6a2a065c2ffa0aa42064d91628e'],
	['00000823', files('00000823.ivf'), '7ab7d45757c9c2a64d5bf1d21ace06f1'],
	['00000824', files('00000824.ivf'), '0a4d3a3c3b1d232b4a06cfc20c48f74e'],
	['00000825', files('00000825.ivf'), '7c2ad14cacad6291889102abebd4d4f2'],
	['00000826', files('00000826.ivf'), 'b18cd71dd4db1694f35602cf6750a6b4'],
	['00000827', files('00000827.ivf'), '538578cfb6f80bfe9d11c50648d2388e'],
	['00000828', files('00000828.ivf'), 'd957e2d041f0f4320b8966197ef29891'],
	['00000829', files('00000829.ivf'), 'f29e1e0923f5b03ae3031fd502ffb729'],
	['00000830', files('00000830.ivf'), '9d24c6d6e9376abba2dba511be86d96d'],
	['00000831', files('00000831.ivf'), '357976b22cf63151776ca21e2927eaac'],
	['00000832', files('00000832.ivf'), 'e99d0511dfe8f195ba1d0935b2d3e199'],
	['00000833', files('00000833.ivf'), '8c8af3a3623d3489bf66823d55c1f445'],
	['00000834', files('00000834.ivf'), '331b15e84f559e1dc0ce898253275d4f'],
	['00000835', files('00000835.ivf'), 'ea70cd64cb120903f9087d1c545faa81'],
	['00000836', files('00000836.ivf'), 'd1a59ddcf0b17cdf13bd5677418d5b41'],
	['00000837', files('00000837.ivf'), '8b66f3d3eb9a867ebbc4a2265605ea9b'],
	['00000937', files('00000937.ivf'), 'b082b8e2595ea4e6a877ade2eef9a6dd'],
	['00000938', files('00000938.ivf'), '8ab77b5a63369767fcc7e2f29ddafa6c'],
	['00000939', files('00000939.ivf'), '57a52a40cb4a188c5d298764b28da3e4'],
	['00000940', files('00000940.ivf'), 'c8cda9a5c54da566d347fefe0296cc11'],
	['00000941', files('00000941.ivf'), '6ccbf790538a8ec74349bc80ad8f51bd'],
	['00000942', files('00000942.ivf'), '37cbd3ff0db32946f9fad29b5a693632'],
	['00000943', files('00000943.ivf'), '890d15434e2b39fb5575dedd4d76b3e6'],
	['00000944', files('00000944.ivf'), '1be07cdf431662b483e96da1382c897f'],
]
