# Copyright © 2018, VideoLAN and dav1d authors
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this
#    list of conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice,
#    this list of conditions and the following disclaimer in the documentation
#    and/or other materials provided with the distribution.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
# ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
# ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
# LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

tests += [
	['av1-1-b10-00-quantizer-00', files('av1-1-b10-00-quantizer-00.ivf'), '8b834b72fe9c5dbd24c0869370f38157'],
	['av1-1-b10-00-quantizer-01', files('av1-1-b10-00-quantizer-01.ivf'), '57897599b284e73ad15bab304ba60c49'],
	['av1-1-b10-00-quantizer-02', files('av1-1-b10-00-quantizer-02.ivf'), '628c9237205c34327cb964fea1df2f39'],
	['av1-1-b10-00-quantizer-03', files('av1-1-b10-00-quantizer-03.ivf'), 'fdcef1fbc21ce9ddc83c6b362d155801'],
	['av1-1-b10-00-quantizer-04', files('av1-1-b10-00-quantizer-04.ivf'), 'ad1b12a6a0cbad1454655f529eb01ee7'],
	['av1-1-b10-00-quantizer-05', files('av1-1-b10-00-quantizer-05.ivf'), 'dc91c70dbff3e4b29b61bbc72984f662'],
	['av1-1-b10-00-quantizer-06', files('av1-1-b10-00-quantizer-06.ivf'), '92cf05c5e9f765131632b3c23fef9d03'],
	['av1-1-b10-00-quantizer-07', files('av1-1-b10-00-quantizer-07.ivf'), '7477fc4e6b8594c99882ff39fc890c17'],
	['av1-1-b10-00-quantizer-08', files('av1-1-b10-00-quantizer-08.ivf'), 'dd28c75562a3a66754a4e9c2333257ae'],
	['av1-1-b10-00-quantizer-09', files('av1-1-b10-00-quantizer-09.ivf'), 'ebc0eeaab20e4760ac2ed0735aaba9d6'],
	['av1-1-b10-00-quantizer-10', files('av1-1-b10-00-quantizer-10.ivf'), '2387e415ebed841a1a6a3c3c070ebdcb'],
	['av1-1-b10-00-quantizer-11', files('av1-1-b10-00-quantizer-11.ivf'), 'a5b8e3891e1fdb046018878cc3220c6f'],
	['av1-1-b10-00-quantizer-12', files('av1-1-b10-00-quantizer-12.ivf'), '2f6738252f8050d5fdcfd1c96e12b3df'],
	['av1-1-b10-00-quantizer-13', files('av1-1-b10-00-quantizer-13.ivf'), '3fc9986d441720eebbd83037fec89b62'],
	['av1-1-b10-00-quantizer-14', files('av1-1-b10-00-quantizer-14.ivf'), 'eb08b8cc797306afa84c884ac53e5948'],
	['av1-1-b10-00-quantizer-15', files('av1-1-b10-00-quantizer-15.ivf'), '0df1d0fd054ee0efa091add7cd9f6963'],
	['av1-1-b10-00-quantizer-16', files('av1-1-b10-00-quantizer-16.ivf'), 'e12361887c1fbcbcbd9267d68e9afb1e'],
	['av1-1-b10-00-quantizer-17', files('av1-1-b10-00-quantizer-17.ivf'), '7458a9278a04b2dfe1e69737dee05faf'],
	['av1-1-b10-00-quantizer-18', files('av1-1-b10-00-quantizer-18.ivf'), '9acd975ffa0a24c45c7f8ed28ed7713f'],
	['av1-1-b10-00-quantizer-19', files('av1-1-b10-00-quantizer-19.ivf'), 'bcaef8ca235d140afd3803dd0cdded9f'],
	['av1-1-b10-00-quantizer-20', files('av1-1-b10-00-quantizer-20.ivf'), '2e7b859b62088c09c753828949b9ef1b'],
	['av1-1-b10-00-quantizer-21', files('av1-1-b10-00-quantizer-21.ivf'), '683ec2cb82937b8688cb9611238c59ad'],
	['av1-1-b10-00-quantizer-22', files('av1-1-b10-00-quantizer-22.ivf'), '397acee1e5aa84492256a49f27789dbb'],
	['av1-1-b10-00-quantizer-23', files('av1-1-b10-00-quantizer-23.ivf'), '119acc22d7f20a2cd43a0ab7474d4089'],
	['av1-1-b10-00-quantizer-24', files('av1-1-b10-00-quantizer-24.ivf'), '6ca1933add258b0236d9cbbdd9bcd8e4'],
	['av1-1-b10-00-quantizer-25', files('av1-1-b10-00-quantizer-25.ivf'), '2e43ab094e6c6e93655f11f68d2990d0'],
	['av1-1-b10-00-quantizer-26', files('av1-1-b10-00-quantizer-26.ivf'), '80ab8de4b5c151a848eaada9b4a348db'],
	['av1-1-b10-00-quantizer-27', files('av1-1-b10-00-quantizer-27.ivf'), '39202ccd503ede4544125b3051c1913f'],
	['av1-1-b10-00-quantizer-28', files('av1-1-b10-00-quantizer-28.ivf'), '718eca98a39315c735107898c2e0ceb3'],
	['av1-1-b10-00-quantizer-29', files('av1-1-b10-00-quantizer-29.ivf'), 'a406b418d474b31f02a8807e8ca2b4a4'],
	['av1-1-b10-00-quantizer-30', files('av1-1-b10-00-quantizer-30.ivf'), 'aa68b016e1c4151b49a6e7ec8865ec92'],
	['av1-1-b10-00-quantizer-31', files('av1-1-b10-00-quantizer-31.ivf'), '18da23bedef08352928852ae183bbf71'],
	['av1-1-b10-00-quantizer-32', files('av1-1-b10-00-quantizer-32.ivf'), '1de5e5c5b904ebcda24b03a186b39792'],
	['av1-1-b10-00-quantizer-33', files('av1-1-b10-00-quantizer-33.ivf'), 'b37f6c6d4165c7a63ec12e134eabff5b'],
	['av1-1-b10-00-quantizer-34', files('av1-1-b10-00-quantizer-34.ivf'), 'c90f00a0e1e72f834095d2c60b9c4b80'],
	['av1-1-b10-00-quantizer-35', files('av1-1-b10-00-quantizer-35.ivf'), 'e3b8468fa7395ff12da67a0f07179c58'],
	['av1-1-b10-00-quantizer-36', files('av1-1-b10-00-quantizer-36.ivf'), '526d21a06b007c9e735640e6470e7888'],
	['av1-1-b10-00-quantizer-37', files('av1-1-b10-00-quantizer-37.ivf'), 'ea4c6aa2e6437f9beffca95b395b5299'],
	['av1-1-b10-00-quantizer-38', files('av1-1-b10-00-quantizer-38.ivf'), '00d04f3f06ae3b6ee759566e0024741b'],
	['av1-1-b10-00-quantizer-39', files('av1-1-b10-00-quantizer-39.ivf'), 'cbba192759fe0915ea56ed6732ba21cb'],
	['av1-1-b10-00-quantizer-40', files('av1-1-b10-00-quantizer-40.ivf'), '6854e82b96b1e16ee4b072fa5669b0e1'],
	['av1-1-b10-00-quantizer-41', files('av1-1-b10-00-quantizer-41.ivf'), '4b09c49eb1f9732584a22facf6a02a34'],
	['av1-1-b10-00-quantizer-42', files('av1-1-b10-00-quantizer-42.ivf'), 'd22aa42a80f48e63d82080b26c48e3f3'],
	['av1-1-b10-00-quantizer-43', files('av1-1-b10-00-quantizer-43.ivf'), 'da46c8cad4caf9c91bde58447c2651e8'],
	['av1-1-b10-00-quantizer-44', files('av1-1-b10-00-quantizer-44.ivf'), 'ad1e1d026e0126373f64bbba2d85429f'],
	['av1-1-b10-00-quantizer-45', files('av1-1-b10-00-quantizer-45.ivf'), '04d10320af7d99b8ecbb40ca5c63681f'],
	['av1-1-b10-00-quantizer-46', files('av1-1-b10-00-quantizer-46.ivf'), '9c4a60481b7797059d7f6c166929e8d4'],
	['av1-1-b10-00-quantizer-47', files('av1-1-b10-00-quantizer-47.ivf'), '98a1821861dcae3ec77ab10a2dd0c4bb'],
	['av1-1-b10-00-quantizer-48', files('av1-1-b10-00-quantizer-48.ivf'), '3b87ce150d6746eb868b27a19fb86e7f'],
	['av1-1-b10-00-quantizer-49', files('av1-1-b10-00-quantizer-49.ivf'), 'f5cbe85a504c93913c2d58d4b9c0a0c9'],
	['av1-1-b10-00-quantizer-50', files('av1-1-b10-00-quantizer-50.ivf'), '77258f68bb746a04bebf57fd23582b49'],
	['av1-1-b10-00-quantizer-51', files('av1-1-b10-00-quantizer-51.ivf'), 'c0b2dbfeaba5f4f3b4501b1d118bc3d1'],
	['av1-1-b10-00-quantizer-52', files('av1-1-b10-00-quantizer-52.ivf'), 'fdcdb83a737333ac30f13c4acd976fe1'],
	['av1-1-b10-00-quantizer-53', files('av1-1-b10-00-quantizer-53.ivf'), 'd505ed81e470319d4acf7dce262323c2'],
	['av1-1-b10-00-quantizer-54', files('av1-1-b10-00-quantizer-54.ivf'), '8a6fd37547462a6e9ffd629eb4a9563e'],
	['av1-1-b10-00-quantizer-55', files('av1-1-b10-00-quantizer-55.ivf'), 'bb08af0080f809b02fb34ccb38c6d20d'],
	['av1-1-b10-00-quantizer-56', files('av1-1-b10-00-quantizer-56.ivf'), '0aeb3a869af91f4ca58a6f67b488b6ae'],
	['av1-1-b10-00-quantizer-57', files('av1-1-b10-00-quantizer-57.ivf'), '34234be86e8522694f906ea8ccf2ca39'],
	['av1-1-b10-00-quantizer-58', files('av1-1-b10-00-quantizer-58.ivf'), 'c9fbfffdc05090be19ce94e244002f6d'],
	['av1-1-b10-00-quantizer-59', files('av1-1-b10-00-quantizer-59.ivf'), '1908cfabb49b6b2c53d3d5b575e54b1e'],
	['av1-1-b10-00-quantizer-60', files('av1-1-b10-00-quantizer-60.ivf'), '30b16f739a40fea2b0f035acd27ea16f'],
	['av1-1-b10-00-quantizer-61', files('av1-1-b10-00-quantizer-61.ivf'), '33c469d4efc580705517f432f0b1ede9'],
	['av1-1-b10-00-quantizer-62', files('av1-1-b10-00-quantizer-62.ivf'), 'd959b0257d18892af3c7524e65609d05'],
	['av1-1-b10-00-quantizer-63', files('av1-1-b10-00-quantizer-63.ivf'), 'cd215b30e02ffe016f4fccb8feb5e375'],
]
